--- a/templates/layout.html
+++ b/templates/layout.html
@@ -90,12 +90,6 @@
           <li class="nav-item active">
             <a class="nav-link" href="/recognition">Recognition</a>
           </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="/cv">CV</a>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="/contact">Contact</a>
-          </li>
           <li class="nav-item dropdown active">
             <a
               class="nav-link dropdown-toggle"
@@ -122,6 +116,18 @@
     </header>
     {% block body %}{% endblock %}
     <br />
+    <hr />
+    <footer class="text-center text-lg-start">
+      <div class="text-center p-3">
+        <p>
+          <a href="mailto:vasundhara131719@gmail.com">Email</a> |
+          <a href="https://github.com/vgautam">GitHub</a> |
+          <a href="https://orcid.org/0000-0002-7263-8578">ORCID</a> |
+          <a href="https://www.linkedin.com/in/vasundharagautam/">LinkedIn</a> |
+          <a href="https://twitter.com/VasundharaNLP">Twitter</a>
+        </p>
+      </div>
+    </footer>
     <!-- jQuery and Bootstrap JS -->
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
