udpate recognition as of July 2021

--- a/templates/recognition.html
+++ b/templates/recognition.html
@@ -23,19 +23,23 @@ Scholarships, and More{% endblock %} {% block body %}
           agender identity and neopronouns, among other things.
         </li>
         <li>
-          Upcoming: Will give a talk at Women in Voice 2021 titled Lofty
-          Linguistic Ideals and Deploying in Tech Realities, about balancing the
-          sometimes conflicting goals of the linguist and the software engineer
-          in me.
+          Invited to lead a workshop on inclusive language at Open Source Day
+          2021 (hackathon at AnitaB.org's virtual Grace Hopper Celebration),
+          Summer 2021.
         </li>
         <li>
-          Upcoming: Invited to speak at Simon Fraser University's Communication
-          and Language class, Summer 2021.
+          Gave a talk at Women in Voice 2021 titled Lofty Linguistic Ideals and
+          Deploying in Tech Realities, about balancing the sometimes conflicting
+          goals of the linguist and the software engineer in me.<a
+            href="https://www.youtube.com/watch?v=Sz274hsvKTM"
+            >YouTube video: Recording of my talk (only automatic captions
+            available right now, but I'm working on it).</a
+          >
         </li>
         <li>
-          Upcoming: Invited to lead a workshop on inclusive language at Open
-          Source Day 2021 (hackathon at AnitaB.org's virtual Grace Hopper
-          Celebration), Summer 2021.
+          Invited guest lecture on speech recognition and computational
+          linguistics, at Simon Fraser University's Communication and Language
+          class (LING 100), Summer 2021.
         </li>
       </ul>
     </section>
