remove subtitle from jumbotron

--- a/templates/birding.html
+++ b/templates/birding.html
@@ -1,6 +1,5 @@
 {% extends "layout.html" %} {% block short_title %}Birding{% endblock %} {%
-block title %}Birding{% endblock %} {% block subtitle %}Photographs and
-checklists{% endblock %} {% block body %}
+block title %}Birding{% endblock %} {% block body %}
 <main role="main" class="container">
   <div class="container" align="center">
     <p>
