--- a/templates/cv.html
+++ b/templates/cv.html
@@ -1,6 +1,5 @@
 {% extends "layout.html" %} {% block short_title %}CV{% endblock %} {% block
-title %}Curriculum Vitae{% endblock %} {% block subtitle %}Full CV as of January
-2021{% endblock %} {% block body %}
+title %}Curriculum Vitae{% endblock %} {% block body %}
 <main role="main" class="container">
   <div class="container" align="center">
     <p>
