--- a/templates/music.html
+++ b/templates/music.html
@@ -1,6 +1,5 @@
 {% extends "layout.html" %} {% block short_title %}Music{% endblock %} {% block
-title %}Music{% endblock %} {% block subtitle %}Singing and piano{% endblock %}
-{% block body %}
+title %}Music{% endblock %} {% block body %}
 <main role="main" class="container">
   <div class="container">
     <h4>
