--- a/templates/recognition.html
+++ b/templates/recognition.html
@@ -1,6 +1,5 @@
 {% extends "layout.html" %} {% block short_title %}Recognition{% endblock %} {%
-block title %}Recognition{% endblock %} {% block subtitle %}Awards,
-Scholarships, and More{% endblock %} {% block body %}
+block title %}Recognition{% endblock %} {% block body %}
 <main role="main" class="container">
   <div class="container">
     <section>
