--- a/templates/service.html
+++ b/templates/service.html
@@ -1,6 +1,5 @@
 {% extends "layout.html" %} {% block short_title %}Service{% endblock %} {%
-block title %}Service{% endblock %} {% block subtitle %}Volunteering,
-Mentorship, and More{% endblock %} {% block body %}
+block title %}Service{% endblock %} {% block body %}
 <main role="main" class="container">
   <div class="container">
     <section>
