--- a/templates/work.html
+++ b/templates/work.html
@@ -1,6 +1,5 @@
 {% extends "layout.html" %} {% block short_title %}Work{% endblock %} {% block
-title %}Work{% endblock %} {% block subtitle %}Research, Industry Projects, and
-More{% endblock %} {% block body %}
+title %}Work{% endblock %} {% block body %}
 <main role="main" class="container">
   <div class="container">
     <section>
