--- a/templates/404.html
+++ b/templates/404.html
@@ -1,6 +1,5 @@
 {% extends "layout.html" %} {% block short_title %}404{% endblock %} {% block
-title %}404 Error{% endblock %} {% block subtitle %}Not Found{% endblock %} {%
-block body %}
+title %}404 Error{% endblock %} {% block body %}
 <main role="main" class="container">
   <div class="container" align="center">
     <p>Nothing to see here...</p>
