--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,5 @@
 {% extends "layout.html" %} {% block short_title %}Home{% endblock %} {% block
-title %}Vasundhara Gautam{% endblock %} {% block subtitle %}Computational
-Linguist{% endblock %} {% block body %}
+title %}Vasundhara Gautam{% endblock %} {% block body %}
 <main role="main" class="container">
   <div class="container">
     <div class="row">
