--- a/templates/layout.html
+++ b/templates/layout.html
@@ -82,6 +82,9 @@
             <a class="nav-link" href="/work">Work</a>
           </li>
           <li class="nav-item active">
+            <a class="nav-link" href="/writing">Writing</a>
+          </li>
+          <li class="nav-item active">
             <a class="nav-link" href="/service">Service</a>
           </li>
           <li class="nav-item active">
