fix spacing issues

--- a/templates/recognition.html
+++ b/templates/recognition.html
@@ -29,8 +29,8 @@ block title %}Recognition{% endblock %} {% block body %}
         <li>
           Gave a talk at Women in Voice 2021 titled Lofty Linguistic Ideals and
           Deploying in Tech Realities, about balancing the sometimes conflicting
-          goals of the linguist and the software engineer in me.<a
-            href="https://www.youtube.com/watch?v=Sz274hsvKTM"
+          goals of the linguist and the software engineer in me.
+          <a href="https://www.youtube.com/watch?v=Sz274hsvKTM"
             >YouTube video: Recording of my talk (only automatic captions
             available right now, but I'm working on it).</a
           >
