add intersectionality panel recording link

--- a/templates/service.html
+++ b/templates/service.html
@@ -36,7 +36,10 @@ block title %}Service{% endblock %} {% block body %}
             title="North American Chapter of the Association for Computational Linguistics"
             >NAACL</abbr
           >
-          2021. YouTube video recording coming soon.
+          2021.
+          <a href="https://www.youtube.com/watch?v=cryfXlYWWp8"
+            >YouTube video: Recording of the panel.</a
+          >
         </li>
         <li>
           Mentored 4 people who contacted me through LinkedIn, Twitter or email
