add link to Avengers, Ensemble paper

--- a/templates/writing.html
+++ b/templates/writing.html
@@ -6,9 +6,12 @@ block title %}Writing{% endblock %} {% block body %}
       <h2>Papers</h2>
       <ul>
         <li>
-          Avengers, Ensemble! Benefits of ensembling in grapheme-to-phoneme
-          prediction (2021). Proceedings of the 18th SIGMORPHON Workshop on
-          Computational Research in Phonetics, Phonology, and Morphology.
+          <a href="https://aclanthology.org/2021.sigmorphon-1.16/"
+            >Avengers, Ensemble! Benefits of ensembling in grapheme-to-phoneme
+            prediction</a
+          >
+          (2021). Proceedings of the 18th SIGMORPHON Workshop on Computational
+          Research in Phonetics, Phonology, and Morphology.
           <strong>Vasundhara Gautam</strong>, Wang Yau Li, Zafarullah Mahmood,
           Fred Mailhot, Shreekantha Nadig, Riqiang Wang, and Nathan Zhang.
         </li>
