migrate recognition, service, work and writing

--- a/templates/404.html
+++ b/templates/404.html
@@ -1,8 +1,11 @@
-{% extends "layout.html" %} {% block short_title %}404{% endblock %} {% block
-title %}404 Error{% endblock %} {% block body %}
+---
+short_title: 404
+title: 404 Error
+layout: layouts/layout
+---
+
 <main role="main" class="container">
   <div class="container" align="center">
     <p>Nothing to see here...</p>
   </div>
 </main>
-{% endblock %}
