--- a/templates/index.html
+++ b/templates/index.html
@@ -64,7 +64,10 @@ layout: layouts/layout
             />
             <p>
               Your browser doesn't support HTML5 audio. Here is a
-              <a href="/static/audio/vasundhara_gautam.wav">link to the audio</a> instead.
+              <a href="/static/audio/vasundhara_gautam.wav"
+                >link to the audio</a
+              >
+              instead.
             </p>
           </audio>
           <div class="controls custom-audio-player" align="center">
