--- a/templates/work.html
+++ b/templates/work.html
@@ -1,5 +1,9 @@
-{% extends "layout.html" %} {% block short_title %}Work{% endblock %} {% block
-title %}Work{% endblock %} {% block body %}
+---
+short_title: Work
+title: Work
+layout: layouts/layout
+---
+
 <main role="main" class="container">
   <div class="container">
     <section>
@@ -370,4 +374,3 @@ title %}Work{% endblock %} {% block body %}
     </section>
   </div>
 </main>
-{% endblock %}
