--- a/templates/writing.html
+++ b/templates/writing.html
@@ -1,5 +1,9 @@
-{% extends "layout.html" %} {% block short_title %}Writing{% endblock %} {%
-block title %}Writing{% endblock %} {% block body %}
+---
+short_title: Writing
+title: Writing
+layout: layouts/layout
+---
+
 <main role="main" class="container">
   <div class="container">
     <section>
@@ -83,4 +87,3 @@ block title %}Writing{% endblock %} {% block body %}
     </section>
   </div>
 </main>
-{% endblock %}
