--- a/templates/index.html
+++ b/templates/index.html
@@ -4,90 +4,81 @@ title: Vasundhara Gautam
 layout: layouts/layout
 ---
 
-<main role="main" class="container">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-8 mx-auto">
+<div class="row">
+  <div class="col-md-8 mx-auto">
+    <p>
+      Hi! I'm Vasundhara, your friendly neighbourhood computational linguist and
+      birder.
+    </p>
+    <p>
+      I'm about to be a computer science PhD student at Saarland University in
+      Germany. Before this I worked for over 2 years in industry as a Speech
+      Recognition Engineer at Dialpad in Canada. I have a BSc in Computing
+      Science and Linguistics from Simon Fraser University, where I also worked
+      at an experimental phonology lab and a discourse processing lab.
+    </p>
+    <p>My research interests include:</p>
+    <ul>
+      <li>multilingual and multi-user language and speech processing</li>
+      <li>phonetics and phonology</li>
+      <li>low-resource settings</li>
+    </ul>
+    <p>
+      I hope to combine these interests in my PhD research and study compact,
+      linguistically motivated speaker representations that would be applied at
+      decode time to improve speech recognition for speakers of nonstandard
+      varieties of spoken languages and/or with disordered speech.
+    </p>
+    <p>
+      My philosophy on science is that it should do good in the world and
+      actively include those outside the ivory tower. Science communication is
+      an integral part of the science I want to do, which includes engaging the
+      public with my work and communicating complex ideas accessibly.
+    </p>
+    <p>
+      My pronouns are <a href="https://pronoun.is/xe">xe/xem</a> and
+      <a href="https://pronoun.is/they">they/them</a>. Press the play button to
+      hear my name. If you know the
+      <a href="https://en.wikipedia.org/wiki/International_Phonetic_Alphabet"
+        >IPA</a
+      >, I pronounce my name like
+      <span class="ipa-pronunciation"
+        >[v&#652;'s&#361;n.d&#810;&#689;&#601;.&#638;a&#720;.'ga&#650;.t&#810;&#652;m]</span
+      >
+      and will accept your best approximation of
+      <span class="ipa-pronunciation"
+        >/v&#652;'s&#650;n.da.ra.'ga&#650;.tam/</span
+      >.
+    </p>
+    <section class="player">
+      <audio class="custom-audio-player">
+        <source
+          src="{{ '/static/audio/vasundhara_gautam.wav' }}"
+          type="audio/wav"
+        />
         <p>
-          Hi! I'm Vasundhara, your friendly neighbourhood computational linguist
-          and birder.
+          Your browser doesn't support HTML5 audio. Here is a
+          <a href="/static/audio/vasundhara_gautam.wav">link to the audio</a>
+          instead.
         </p>
-        <p>
-          I'm about to be a computer science PhD student at Saarland University
-          in Germany. Before this I worked for over 2 years in industry as a
-          Speech Recognition Engineer at Dialpad in Canada. I have a BSc in
-          Computing Science and Linguistics from Simon Fraser University, where
-          I also worked at an experimental phonology lab and a discourse
-          processing lab.
-        </p>
-        <p>My research interests include:</p>
-        <ul>
-          <li>multilingual and multi-user language and speech processing</li>
-          <li>phonetics and phonology</li>
-          <li>low-resource settings</li>
-        </ul>
-        <p>
-          I hope to combine these interests in my PhD research and study
-          compact, linguistically motivated speaker representations that would
-          be applied at decode time to improve speech recognition for speakers
-          of nonstandard varieties of spoken languages and/or with disordered
-          speech.
-        </p>
-        <p>
-          My philosophy on science is that it should do good in the world and
-          actively include those outside the ivory tower. Science communication
-          is an integral part of the science I want to do, which includes
-          engaging the public with my work and communicating complex ideas
-          accessibly.
-        </p>
-        <p>
-          My pronouns are <a href="https://pronoun.is/xe">xe/xem</a> and
-          <a href="https://pronoun.is/they">they/them</a>. Press the play button
-          to hear my name. If you know the
-          <a
-            href="https://en.wikipedia.org/wiki/International_Phonetic_Alphabet"
-            >IPA</a
-          >, I pronounce my name like
-          <span class="ipa-pronunciation"
-            >[v&#652;'s&#361;n.d&#810;&#689;&#601;.&#638;a&#720;.'ga&#650;.t&#810;&#652;m]</span
-          >
-          and will accept your best approximation of
-          <span class="ipa-pronunciation"
-            >/v&#652;'s&#650;n.da.ra.'ga&#650;.tam/</span
-          >.
-        </p>
-        <section class="player">
-          <audio class="custom-audio-player">
-            <source
-              src="{{ '/static/audio/vasundhara_gautam.wav' }}"
-              type="audio/wav"
-            />
-            <p>
-              Your browser doesn't support HTML5 audio. Here is a
-              <a href="/static/audio/vasundhara_gautam.wav"
-                >link to the audio</a
-              >
-              instead.
-            </p>
-          </audio>
-          <div class="controls custom-audio-player" align="center">
-            <button class="playpause custom-audio-player">Play</button>
-          </div>
-        </section>
+      </audio>
+      <div class="controls custom-audio-player" align="center">
+        <button class="playpause custom-audio-player">Play</button>
       </div>
-      <div class="col-md-4 mx-auto">
-        <figure align="center">
-          <img
-            src="{{ '/static/img/vasundhara.png' }}"
-            class="img-fluid"
-            alt="Vasundhara smiling into the camera with black rimmed glasses, metallic blue lipstick and a Metallica t-shirt. Xyr hair is short and xe has a side buzz and a nose piercing. The background is a pixelated version of the colourful map in this site's header image."
-          />
-          <figcaption>Me, circa 2021</figcaption>
-        </figure>
-      </div>
-    </div>
+    </section>
+    <br />
   </div>
-</main>
+  <div class="col-md-4 mx-auto">
+    <figure align="center">
+      <img
+        src="{{ '/static/img/vasundhara.png' }}"
+        class="img-fluid"
+        alt="Vasundhara smiling into the camera with black rimmed glasses, metallic blue lipstick and a Metallica t-shirt. Xyr hair is short and xe has a side buzz and a nose piercing. The background is a pixelated version of the colourful map in this site's header image."
+      />
+      <figcaption>Me, circa 2021</figcaption>
+    </figure>
+  </div>
+</div>
 <script>
   const playPauseBtn = document.querySelector(".custom-audio-player.playpause");
   const player = document.querySelector("audio.custom-audio-player");
