update my photo to include a cat

--- a/templates/index.html
+++ b/templates/index.html
@@ -73,7 +73,7 @@ layout: layouts/layout
       <img
         src="{{ '/static/img/vasundhara.png' }}"
         class="img-fluid"
-        alt="Vasundhara smiling into the camera with black rimmed glasses, metallic blue lipstick and a Metallica t-shirt. Xyr hair is short and xe has a side buzz and a nose piercing. The background is a pixelated version of the colourful map in this site's header image."
+        alt="Vasundhara smiling at the camera holding Laszlo, a striped 5-month old kitten. Laszlo is a striped tabby x shorthair kitten and his owners Danica and Seb suspect that he probably also has some Bengal cat in him. Vasundhara is brown-skinned and has short curly black hair with a side buzz. Xe has a nose ring and a septum ring and is wearing a grey t-shirt. Laszlo's paws hang over xyr left arm and he looks very soft."
       />
       <figcaption>Me, circa 2021</figcaption>
     </figure>
