--- a/templates/_includes/layouts/layout.njk
+++ b/templates/_includes/layouts/layout.njk
@@ -92,6 +92,9 @@
           </li>
           <li class="nav-item active">
             <a class="nav-link" href="/recognition">{{ "&#9758;" | safe if '/recognition' in page.url }}Recognition</a>
+          <li class="nav-item active">
+            <a class="nav-link" href="/posts">{{ "&#9758;" | safe if '/posts' in page.url }}Blog</a>
+          </li>
           </li>
         </ul>
       </div>
