add description fields to frontmatter

--- a/templates/all-tags.njk
+++ b/templates/all-tags.njk
@@ -2,6 +2,7 @@
 permalink: /tags/
 layout: layouts/layout
 title: All tags
+description: List of all tags used on Vasundhara Gautam's blog
 ---
 <style>
 @media (min-width: 1200px) {
