--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,7 @@
 ---
 short_title: Home
 title: Vasundhara Gautam
+description: Homepage of Vasundhara Gautam's website
 layout: layouts/layout
 ---
 
