--- a/templates/tags.njk
+++ b/templates/tags.njk
@@ -13,6 +13,7 @@ pagination:
 layout: layouts/layout
 eleventyComputed:
   title: Tagged "{{ tag }}"
+  description: Search results on Vasundhara Gautam's blog for "{{ tag }}"
 permalink: /tags/{{ tag | slug }}/
 ---
 
