--- a/templates/_includes/layouts/layout.njk
+++ b/templates/_includes/layouts/layout.njk
@@ -121,7 +121,8 @@
           <a href="https://github.com/vgautam">GitHub</a> |
           <a href="https://orcid.org/0000-0002-7263-8578">ORCID</a> |
           <a href="https://www.linkedin.com/in/vasundharagautam/">LinkedIn</a> |
-          <a href="https://twitter.com/VasundharaNLP">Twitter</a>
+          <a href="https://twitter.com/VasundharaNLP">Twitter</a> |
+          <a href="{{ "/feed.xml" | url }}">Feed</a>
         </p>
       </div>
     </footer>
