add note about feed to archive page

--- a/templates/posts.njk
+++ b/templates/posts.njk
@@ -11,5 +11,7 @@ layout: layouts/layout
 }
 </style>
 
+<p>You can also <a href="{{ "/feed.xml" | url }}">subscribe to my feed</a> with your favourite feed reader.<p>
+
 {% set postslist = collections.posts %}
 {% include "postslist.njk" %}
