add link to feed in html head

--- a/templates/_includes/layouts/layout.njk
+++ b/templates/_includes/layouts/layout.njk
@@ -68,6 +68,7 @@
       }
     </style>
     <title>{{ short_title | escape if short_title else title | escape }} | Vasundhara Gautam</title>
+    <link href="{{ "/feed.xml" | url }}" type="application/atom+xml" rel="alternate" title="Vasundhara Gautam's blog feed" />
   </head>
   <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
