replace bootstrap css with custom subset

--- a/templates/_includes/layouts/layout.njk
+++ b/templates/_includes/layouts/layout.njk
@@ -23,13 +23,7 @@
     <meta name="twitter:description" content="{{ description | escape }}" />
     <meta name="twitter:image" content="https://vasundharagautam.com/static/img/map.jpg" />
     <meta name="twitter:image:alt" content="Close-up of a colourful geographical map of North America." />
-    <!-- Bootstrap CSS -->
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-      integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
-      crossorigin="anonymous"
-    />
+    <link rel="stylesheet" href="{{ "/static/css/bootstrap-subset.css" | url }}"/>
     <!-- My CSS -->
     <style>
       vgtitle {
