clean up subtypes of unnecessary bootstrap columns

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@ layout: layouts/layout
 ---
 
 <div class="row">
-  <div class="col-md-8 mx-auto">
+  <div class="col col-md-8 mx-auto">
     <p>
       Hi! I'm Vasundhara, your friendly neighbourhood computational linguist and
       birder.
@@ -69,7 +69,7 @@ layout: layouts/layout
     </section>
     <br />
   </div>
-  <div class="col-md-4 mx-auto">
+  <div class="col col-md-4 mx-auto">
     <figure align="center">
       <img
         src="{{ '/static/img/vasundhara.png' }}"
