--- a/templates/_includes/layouts/layout.njk
+++ b/templates/_includes/layouts/layout.njk
@@ -70,12 +70,12 @@
     </header>
     <nav class="nav navbar">
       <div class="flex-row">
-            <a class="nav-link" href="/">{{ "&#9758;" | safe if page.url == '/' }}Home</a>
-            <a class="nav-link" href="/work">{{ "&#9758;" | safe if '/work' in page.url }}Work</a>
-            <a class="nav-link" href="/writing">{{ "&#9758;" | safe if '/writing' in page.url }}Writing</a>
-            <a class="nav-link" href="/service">{{ "&#9758;" | safe if '/service' in page.url }}Service</a>
-            <a class="nav-link" href="/recognition">{{ "&#9758;" | safe if '/recognition' in page.url }}Recognition</a>
-            <a class="nav-link" href="/posts">{{ "&#9758;" | safe if '/posts' in page.url }}Blog</a>
+            <a class="nav-link" href="/"><span>{{ "&#9758;" | safe if page.url == '/' }}Home</span></a>
+            <a class="nav-link" href="/work"><span>{{ "&#9758;" | safe if '/work' in page.url }}Work</span></a>
+            <a class="nav-link" href="/writing"><span>{{ "&#9758;" | safe if '/writing' in page.url }}Writing</span></a>
+            <a class="nav-link" href="/service"><span>{{ "&#9758;" | safe if '/service' in page.url }}Service</span></a>
+            <a class="nav-link" href="/recognition"><span>{{ "&#9758;" | safe if '/recognition' in page.url }}Recognition</span></a>
+            <a class="nav-link" href="/posts"><span>{{ "&#9758;" | safe if '/posts' in page.url }}Blog</span></a>
       </div>
     </nav>
     <main role="main" class="container">
