--- a/templates/index.html
+++ b/templates/index.html
@@ -74,6 +74,8 @@ layout: layouts/layout
       <img
         src="{{ '/static/img/vasundhara.png' }}"
         class="img-fluid"
+        width="1089px"
+        height="1454px"
         alt="Vasundhara smiling at the camera holding Laszlo, a striped 5-month old kitten. Laszlo is a striped tabby x shorthair kitten and his owners Danica and Seb suspect that he probably also has some Bengal cat in him. Vasundhara is brown-skinned and has short curly black hair with a side buzz. Xe has a nose ring and a septum ring and is wearing a grey t-shirt. Laszlo's paws hang over xyr left arm and he looks very soft."
       />
       <figcaption>Me, circa 2021</figcaption>
